# JsonTalkie

./: .cmd_history  .gitignore  README.md  library.properties
Arduino/: .gitignore  BroadcastSocket.h  BroadcastSocket_UDP.cpp  BroadcastSocket_UDP.h
Arduino/JsonTalkie/: BroadcastSocket.h  BroadcastSocket.hpp  BroadcastSocket_EtherCard.cpp  BroadcastSocket_EtherCard.h  BroadcastSocket_Serial.hpp  BroadcastSocket_UDP.cpp  JsonTalkie.cpp  (+5 more)
Cpp/: .gitignore  CMakeLists.txt
Cpp/include/: broadcast_socket.h  json_device.h
Cpp/src/: broadcast_socket.cpp  device1.cpp  device2.cpp  json_device.cpp
Python/: .cmd_history  .gitignore  broadcast_socket.py  broadcast_socket_dummy.py  broadcast_socket_serial.py  broadcast_socket_udp.py  command_line.py  device.py  json_device.py  json_talkie.py  main.py  socket_udp.py  talk.py  walkie_device.py
examples/: README.md
extras/: Notes.txt
manifestos/: BlackManifesto.hpp  BlueManifesto.hpp  BuzzerManifesto.hpp  CallerManifesto.hpp  EspManifesto.hpp  GreenManifesto.hpp  LedManifesto.hpp  M_BlackManifesto.hpp  M_BlueManifesto.hpp  M_BuzzerManifesto.hpp  M_CallerManifesto.hpp  M_CyclerManifesto.hpp  M_Esp66Manifesto.hpp  M_EspManifesto.hpp  M_GreenManifesto.hpp  M_LedManifesto.hpp  M_MegaManifesto.hpp  M_MessageTester.hpp  M_MultipleManifesto.hpp  M_SPIMasterManifesto.hpp  M_SerialManifesto.hpp  M_SingleManifesto.hpp  M_Spy.hpp  MegaManifesto.hpp  MessageTester.hpp  MultipleManifesto.hpp  README.md  SerialManifesto.hpp  SingleManifesto.hpp  Spy.hpp
sockets/: BroadcastESP_WiFi.hpp  BroadcastSocket_EtherCard.cpp  BroadcastSocket_EtherCard.h  BroadcastSocket_Ethernet.hpp  EthernetENC_Broadcast.hpp  README.md  SPI_Arduino_Arduino_Master_Multiple.hpp  SPI_Arduino_Arduino_Master_Single.hpp  SPI_Arduino_Slave.h  SPI_ESP_Arduino_Master.hpp  S_Basic_SPI_ESP_Arduino_Master.hpp  S_BroadcastESP_WiFi.hpp  S_BroadcastSocket_EtherCard.h  S_BroadcastSocket_Ethernet.hpp  S_EthernetENC_Broadcast.hpp  S_SPI_Arduino_Arduino_Master_Multiple.hpp  S_SPI_Arduino_Arduino_Master_Single.hpp  S_SPI_Arduino_Slave.h  S_SPI_ESP_Arduino_Master.hpp  S_SocketSerial.hpp  SocketSerial.hpp
src/: BroadcastSocket.cpp  BroadcastSocket.h  BroadcastSocket.hpp  JsonMessage.hpp  JsonTalker.cpp  JsonTalker.h  JsonTalkie.hpp  MessageRepeater.hpp  TalkerManifesto.hpp  TalkieCodes.hpp
(+299 files in other folders)
